syntax = "proto3";

package shim.task;

import "google/protobuf/empty.proto";

service Task {
    rpc Create(CreateTaskRequest) returns (CreateTaskResponse);
    rpc Start(StartRequest) returns (StartResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc Wait(WaitRequest) returns (WaitResponse);
    rpc Shutdown(ShutdownRequest) returns (google.protobuf.Empty);
}

message CreateTaskRequest {
    string id = 1;
    string bundle = 2;
}

message CreateTaskResponse {
    uint32 pid = 1;
}

message StartRequest {
    string id = 1;
}

message StartResponse {
    uint32 pid = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    uint32 pid = 1;
}

message WaitRequest {
    string id = 1;
}

message WaitResponse {
    uint32 exit_status = 1;
}

message ShutdownRequest {
    string id = 1;
}
